[gd_scene load_steps=9 format=3 uid="uid://duabwu8cvs8w6"]

[ext_resource type="Theme" uid="uid://cnk304tv4ytv5" path="res://assets/globali/GUI/default.tres" id="1_l4po0"]
[ext_resource type="Script" path="res://scripts/globali/UI/menu/level_selector.gd" id="2_1gfst"]
[ext_resource type="PackedScene" uid="uid://cfpp0np486kcq" path="res://scenes/globali/UI/menu/main_menu_parallax_background.tscn" id="2_3fcwl"]
[ext_resource type="Texture2D" uid="uid://23vlpsuu2hgj" path="res://assets/globali/GUI/GUI.png" id="3_67sun"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mphis"]
texture = ExtResource("3_67sun")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
region_rect = Rect2(17, 82, 14, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6nttv"]
texture = ExtResource("3_67sun")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
region_rect = Rect2(1, 81, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_o51n0"]
atlas = ExtResource("3_67sun")
region = Rect2(131, 34, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwbej"]
atlas = ExtResource("3_67sun")
region = Rect2(147, 34, 10, 10)

[node name="LevelSelector" type="Control" node_paths=PackedStringArray("levels")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_l4po0")
script = ExtResource("2_1gfst")
levels = [NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/tutorial"), NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_federico"), NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_elisa"), NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_sara")]

[node name="MainMenuParallaxBackground" parent="." instance=ExtResource("2_3fcwl")]
offset = Vector2(0, -350)
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, -350)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 64
text = "Level Selection"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
texture = ExtResource("3_67sun")
region_rect = Rect2(0, 96, 48, 32)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 50

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_67sun")
region_rect = Rect2(49, 97, 30, 30)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="LevelContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_mphis")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mphis")
theme_override_styles/normal = SubResource("StyleBoxTexture_6nttv")
icon = SubResource("AtlasTexture_o51n0")
icon_alignment = 1
expand_icon = true

[node name="tutorial" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/tutorial"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Tutorial"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/tutorial"]
custom_minimum_size = Vector2(600, 275)
layout_mode = 2

[node name="livello_federico" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_federico"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Level 1"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_federico"]
custom_minimum_size = Vector2(600, 275)
layout_mode = 2

[node name="livello_elisa" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_elisa"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Level 2"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_elisa"]
custom_minimum_size = Vector2(600, 275)
layout_mode = 2

[node name="livello_sara" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_sara"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Level 3"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/livello_sara"]
custom_minimum_size = Vector2(600, 275)
layout_mode = 2
expand_mode = 3

[node name="Next" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_mphis")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mphis")
theme_override_styles/normal = SubResource("StyleBoxTexture_6nttv")
icon = SubResource("AtlasTexture_kwbej")
icon_alignment = 1
expand_icon = true

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
text = "Main menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/LevelContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
